# brittany

./: Dockerfile  README.md  execution.sh  postBuild
brittany/: CMakeLists.txt  package.xml
brittany/include/brittany/: Person.h  brittany.h  networkPrediction.h
brittany/launch/: brittany.launch  brittany_rosbag.launch
brittany/model/: concat_10_2.pb
brittany/model/alexnet/: alexnet
brittany/model/custom/: custom_10_0.pb  custom_10_2.pb  custom_5_0.pb
brittany/model/lenet/: lenet
brittany/src/: brittany.cpp  networkPrediction.cpp
data_labeling_brittany/: CMakeLists.txt  README.md  package.xml
data_labeling_brittany/include/data_labeling_brittany/: data_labeling_brittany.h
data_labeling_brittany/launch/: data_labeling_brittany.launch
data_labeling_brittany/scripts/: create_npy_class.py  generate_npys.sh  join_data_to_train.py  npy_to_images_bw.py
data_labeling_brittany/src/: data_labeling_brittany.cpp
neuronal_network/: alexnet.py  custom.py  lenet.py
neuronal_network/model_files/: concat_10_2.pb  concat_5_2.pb  model_concat_10_1.pb  model_concat_10_2.pb  model_concat_10_3.pb  model_concat_5_1.pb  model_concat_5_2.pb  model_concat_5_3.pb
neuronal_network/train_files/: backtrain_neural_network.py  train_neural_network.py
